Test Canvas fix
The Canvas is currently too wide, try giving it a dynamic size that should keep it contained.

--- a/demos/koodihaaste/css/styles.css
+++ b/demos/koodihaaste/css/styles.css
@@ -6,10 +6,9 @@
 }
 
 .canvas-element {
-    padding-left: 0;
-    padding-right: 0;
-	margin-left: auto;
-	margin-right: auto;
+    padding: 0px auto;
+	margin: 0px auto;
+	max-width: 512px;
 	width: 100%;
 }
 
@@ -28,6 +27,10 @@ body {
 	font-size: 16px;
 	background: #F2F0E7;
 	margin: 0;
+}
+
+p {
+	padding: 0px 20px;
 }
 
 h1 {
